--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -1,9 +1,12 @@
 body, html {
-  width: 100%;
-  height: 100%;
+  height: 98%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  padding: 0.5%;
+  width: 98%;
 }
 
-bodytext, h1, h2, footer, subheader, td, th {
+h1, h2, footer, td, th {
   font-family: arial;
   text-align: center;
 }
@@ -12,19 +15,24 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-table {
+p {
   font-family: arial;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+table {
   border-collapse: collapse;
-  width: 100%;
+  font-family: arial;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 
 @media screen and (orientation: landscape) {
-  bodytext {
-    font-size: 4vh;
-  }
   h1 {
     font-size: 14vh;
-    line-height: 0vh;
   }
   h2 {
     font-size: 8vh;
@@ -32,29 +40,22 @@ table {
   footer {
     font-size: 4vh;
   }
-  subheader {
+  p {
     font-size: 4vh;
-    line-height: 0vh;
   }
   td {
     font-size: 4vh;
     border: 0.5vh solid #dddddd;
-    padding: 1vh;
   }
   th {
     font-size: 4vh;
     border: 0.5vh solid #757575;
-    padding: 1vh;
   }
 }
 
 @media screen and (orientation: portrait) {
-  bodytext {
-    font-size: 4vw;
-  }
   h1 {
     font-size: 14vw;
-    line-height: 0vw;
   }
   h2 {
     font-size: 8vw;
@@ -62,9 +63,8 @@ table {
   footer {
     font-size: 4vw;
   }
-  subheader {
+  p {
     font-size: 4vw;
-    line-height: 0vw;
   }
   td {
     font-size: 4vw;
