--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -6,13 +6,13 @@ body, html {
   width: 98%;
 }
 
-div.titletext {
+div.title {
   font-family: arial;
   text-align: center;
   line-height: 120%;
 }
 
-div.subtitletext, div.subtext {
+div.subtext, div.subtitle {
   font-family: arial;
   text-align: center;
   line-height: 100%;
@@ -31,7 +31,7 @@ img {
 
 p {
   font-family: arial;
-  text-align: center;
+  text-align: left;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
@@ -51,7 +51,7 @@ td, th {
 }
 
 @media screen and (orientation: landscape) {
-  div.titletext {
+  div.title {
     font-size: 14vh;
   }
 
@@ -59,21 +59,18 @@ td, th {
     font-size: 4vh;
   }
 
-  div.subtitletext {
+  div.subtitle {
     font-size: 8vh;
   }
 
-  footer {
-    font-size: 4vh;
-  }
-
-  p {
+  footer, p {
     font-size: 4vh;
   }
 
   td {
-    font-size: 4vh;
     border: 0.5vh solid #dddddd;
+    font-size: 4vh;
+    padding: 1vh;
   }
 
   th {
@@ -85,7 +82,7 @@ td, th {
 }
 
 @media screen and (orientation: portrait) {
-  div.titletext {
+  div.title {
     font-size: 14vw;
   }
 
@@ -93,21 +90,17 @@ td, th {
     font-size: 4vw;
   }
 
-  div.subtitletext {
+  div.subtitle {
     font-size: 8vw;
   }
 
-  footer {
-    font-size: 4vw;
-  }
-
-  p {
+  footer, p {
     font-size: 4vw;
   }
 
   td {
-    font-size: 4vw;
     border: 0.5vw solid #dddddd;
+    font-size: 4vw;
     padding: 1vw;
   }
 
