--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -1,40 +1,68 @@
-body, html {
-  height: 98%;
-  margin-left: 0.5%;
-  margin-right: 0.5%;
-  padding: 0.5%;
-  width: 98%;
+/**
+ * sainternet.xyz - sainternet.css
+ * Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+.demo-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #3F51B5;
+  flex-shrink: 0;
 }
 
-div.title {
-  font-family: arial;
-  text-align: center;
-  line-height: 120%;
+.demo-main {
+  margin-top: -35vh;
+  flex-shrink: 0;
 }
 
-div.subtext, div.subtitle {
-  font-family: arial;
-  text-align: center;
-  line-height: 100%;
+.demo-header .mdl-layout__header-row {
+  padding-left: 40px;
 }
 
-footer {
-  font-family: arial;
-  text-align: center;
+.demo-container {
+  max-width: 1600px;
+  width: calc(100% - 16px);
+  margin: 0 auto;
+}
+
+.demo-content {
+  border-radius: 2px;
+  padding: 80px 56px;
+  margin-bottom: 80px;
+}
+
+.demo-layout.is-small-screen .demo-content {
+  padding: 40px 28px;
+}
+
+.demo-content h3 {
+  margin-top: 48px;
+}
+
+.demo-footer {
+  padding-left: 40px;
+}
+
+.demo-footer .mdl-mini-footer--link-list a {
+  font-size: 13px;
 }
 
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-p {
-  font-family: arial;
-  text-align: left;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
 }
 
 table {
@@ -45,69 +73,32 @@ table {
   width: 90%;
 }
 
-td, th {
-  font-family: arial;
+td, th, h3 {
   text-align: center;
 }
 
 @media screen and (orientation: landscape) {
-  div.title {
-    font-size: 14vh;
-  }
-
-  div.subtext {
-    font-size: 4vh;
-  }
-
-  div.subtitle {
-    font-size: 8vh;
-  }
-
-  footer, p {
-    font-size: 4vh;
-  }
-
   td {
-    border: 0.5vh solid #dddddd;
-    font-size: 4vh;
+    border: 0.4vh solid #dddddd;
     padding: 1vh;
   }
 
   th {
     background-color: #dddddd;
-    border: 0.5vh solid #757575;
-    font-size: 4vh;
+    border: 0.4vh solid #757575;
     padding: 1vh;
   }
 }
 
 @media screen and (orientation: portrait) {
-  div.title {
-    font-size: 14vw;
-  }
-
-  div.subtext {
-    font-size: 4vw;
-  }
-
-  div.subtitle {
-    font-size: 8vw;
-  }
-
-  footer, p {
-    font-size: 4vw;
-  }
-
   td {
-    border: 0.5vw solid #dddddd;
-    font-size: 4vw;
+    border: 0.4vw solid #dddddd;
     padding: 1vw;
   }
 
   th {
     background-color: #dddddd;
-    border: 0.5vw solid #757575;
-    font-size: 4vw;
+    border: 0.4vw solid #757575;
     padding: 1vw;
   }
 }
