--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -38,7 +38,7 @@
 }
 
 .demo-content {
-  border-radius: 2px;
+  border-radius: 6px;
   padding: 80px 56px;
   margin-bottom: 80px;
 }
@@ -49,7 +49,8 @@
 }
 
 .demo-content h3 {
-  margin-top: 12px;
+  margin-top: 6px;
+  text-align: center;
 }
 
 .demo-footer {
@@ -67,39 +68,46 @@ img {
 }
 
 table {
-  border-collapse: collapse;
-  font-family: arial;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
+  border-collapse: separate;
+  border-spacing: 0;
+  min-width: 280px;
 }
 
-td, th, h3 {
+table tr th,
+table tr td {
+  border-right: 2px solid #757575;
+  border-bottom: 2px solid #757575;
+  padding: 6px;
+}
+
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 2px solid #757575;
+}
+
+table tr th:first-child,
+table tr td:first-child {
+  border-left: 2px solid #757575;
+}
+
+table tr th {
+  background: #BDBDBD;
   text-align: center;
+  border-top: solid 2px #757575;
 }
 
-@media screen and (orientation: landscape) {
-  td {
-    border: 0.4vh solid #BDBDBD;
-    padding: 1vh;
-  }
-
-  th {
-    background-color: #BDBDBD;
-    border: 0.4vh solid #757575;
-    padding: 1vh;
-  }
+table tr:first-child th:first-child {
+  border-top-left-radius: 6px;
 }
 
-@media screen and (orientation: portrait) {
-  td {
-    border: 0.4vw solid #BDBDBD;
-    padding: 1vw;
-  }
+table tr:first-child th:last-child {
+  border-top-right-radius: 6px;
+}
 
-  th {
-    background-color: #BDBDBD;
-    border: 0.4vw solid #757575;
-    padding: 1vw;
-  }
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 6px;
+}
+
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 6px;
 }
