saint-lascivious.github.io: fix table width
Changes to be committed:
 - modified:   resources/stylesheets/sainternet.css

--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -70,7 +70,9 @@ img {
 table {
   border-collapse: separate;
   border-spacing: 0;
-  min-width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
 
 table tr th,
