--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -1,19 +1,26 @@
 /**
- * sainternet.xyz - sainternet.css
+ * sainternet.xyz - /resources/stylesheets/sainternet.css
  * Copyright 2022 saint-lascivious (Hayden Pearce). All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *     https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
- * limitations under the License.
+ * limitations under the License
  */
+
+.lux-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #8BBFD1;
+  flex-shrink: 0;
+}
 
 .sainternet-ribbon {
   width: 100%;
@@ -22,13 +29,16 @@
   flex-shrink: 0;
 }
 
-.sainternet-main {
-  margin-top: -35vh;
+.wurm-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #DC686D;
   flex-shrink: 0;
 }
 
-.sainternet-header .mdl-layout__header-row {
-  padding-left: 20px;
+.sainternet-main {
+  margin-top: -35vh;
+  flex-shrink: 0;
 }
 
 .sainternet-container {
@@ -45,7 +55,7 @@
 
 .sainternet-navigation {
   border-radius: 50px;
-  padding: 40px;
+  padding: 30px 28px;
   margin-bottom: 40px;
 }
 
@@ -55,31 +65,51 @@
 }
 
 .sainternet-layout.is-small-screen .sainternet-navigation {
-  padding: 20px 30px;
+  padding: 20px 28px;
   margin-bottom: 20px;
 }
 
 .sainternet-content h3 {
-  margin-top: -20px;
+  margin-top: -10px;
   text-align: center;
 }
 
+.sainternet-layout.is-small-screen .sainternet-content h3 {
+  margin-top: -20px;
+}
+
 .sainternet-footer {
-  padding-left: 40px;
+  padding-left: 30px;
 }
 
 .sainternet-footer .mdl-mini-footer--link-list a {
   font-size: 36px;
 }
 
+.sainternet-layout.is-small-screen .sainternet-footer .mdl-mini-footer--link-list a {
+  font-size: 24px;
+}
+
 .sainternet-footer .mdl-mini-footer--link-list icon {
   text-shadow: 2px 2px 16px #000000;
+}
+
+.sainternet-layout.is-small-screen .sainternet-footer .mdl-mini-footer--link-list icon {
+  text-shadow: 1px 1px 8px #000000;
 }
 
 img {
   display: block;
   margin-bottom: 40px;
   margin-top: 40px;
+}
+
+pre {
+  overflow: auto;
+  background-color: #ffffff;
+  border: 2px solid #757575;
+  border-radius: 8px;
+  padding: 6px;
 }
 
 table {
