--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,6 +15,14 @@
  * limitations under the License
  */
 
+/**
+ * dex-ribbon           purple          9C27BO
+ * dns-ribbon           deep_purple     673AB7
+ * lux-ribbon           blue            2196F3
+ * sainternet-ribbon    indigo          3F51B5
+ * wurm-ribbon          pink            E91C63
+ */
+
 .dex-ribbon {
   width: 100%;
   height: 40vh;
@@ -32,7 +40,7 @@
 .lux-ribbon {
   width: 100%;
   height: 40vh;
-  background-color: #8BBFD1;
+  background-color: #2196F3;
   flex-shrink: 0;
 }
 
