--- a/resources/stylesheets/ribbons.css
+++ b/resources/stylesheets/ribbons.css
@@ -58,3 +58,10 @@
   background-color: #3F51B5;
   flex-shrink: 0;
 }
+
+.wurm-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #E91C63;
+  flex-shrink: 0;
+}
