saint-lascivious.github.io: darkness hereby comes
breadcrumb formatting, (very) basic dark  mode support, general
verbiage changes

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutfiltereddns.html
 - modified:   filtereddns.html
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/sainternet.css

--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -76,3 +76,15 @@
 .sainternet-layout.is-small-screen .sainternet-footer .mdl-mini-footer--link-list icon {
   text-shadow: 1px 1px 8px #000000;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #000000;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: #FFFFFF;
+  }
+}
