--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -36,6 +36,7 @@
   border-radius: 50px;
   padding: 30px 28px;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .sainternet-layout.is-small-screen .sainternet-content {
