--- a/resources/stylesheets/ribbons.css
+++ b/resources/stylesheets/ribbons.css
@@ -15,11 +15,17 @@
  * limitations under the License
  */
 
-/**                                        500|400
+/** Basic Material Design colour pallet    500|400
  * red-ribbon           red             F44336,EF5350
+ * deep_orange-ribbon   deep_orange     FF5722,FF7043
  * orange-ribbon        orange          FF9800,FFA726
  * yellow-ribbon        yellow          FFEB3B,FFF176
+ * amber-ribbon         amber           FFC107,FFCA28
+ * light_green-ribbon   light_green     8BC34A,9CCC65
  * green-ribbon         green           4CAF50,66BB6A
+ * teal-ribbon          teal            009688,26A69A
+ * light_blue-ribbon    light_blue      03A9F4,29B6F6
+ * cyan-ribbon          cyan            00BCD4,26C6DA
  * blue-ribbon          blue            2196F3,42A5F5
  * indigo-ribbon        indigo          3F51B5,5C6BC0
  * purple-ribbon        purple          9C27BO,AB47BC
@@ -30,21 +36,42 @@
 .red-ribbon {
   width: 100%;
   height: 40vh;
-  background-color: #66BB6A;
+  background-color: #EF5350;
   flex-shrink: 0;
 }
 
 .orange-ribbon {
   width: 100%;
   height: 40vh;
-  background-color: #66BB6A;
+  background-color: #FFA726;
+  flex-shrink: 0;
+}
+
+.deep_orange-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #FF7043;
   flex-shrink: 0;
 }
 
 .yellow-ribbon {
   width: 100%;
   height: 40vh;
-  background-color: #66BB6A;
+  background-color: #FFF176;
+  flex-shrink: 0;
+}
+
+.amber-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #FFCA28;
+  flex-shrink: 0;
+}
+
+.light_green-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #9CCC65;
   flex-shrink: 0;
 }
 
@@ -52,6 +79,27 @@
   width: 100%;
   height: 40vh;
   background-color: #66BB6A;
+  flex-shrink: 0;
+}
+
+.teal-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #26A69A;
+  flex-shrink: 0;
+}
+
+.light_blue-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #29B6F6;
+  flex-shrink: 0;
+}
+
+.cyan-ribbon {
+  width: 100%;
+  height: 40vh;
+  background-color: #26C6DA;
   flex-shrink: 0;
 }
 
