--- a/resources/stylesheets/table.css
+++ b/resources/stylesheets/table.css
@@ -18,6 +18,7 @@
 table {
   border-collapse: separate;
   border-spacing: 0;
+  font-size: 0.9em;
   margin-bottom: 40px;
   margin-top: 40px;
   text-align: center;
