--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,6 +15,10 @@
  * limitations under the License
  */
 
+html {
+  scroll-behavior: smooth;
+}
+
 .sainternet-main {
   margin-top: -35vh;
   flex-shrink: 0;
