saint-lascivious.github.io: nope
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - deleted:    resources/javascript/scroll_listener.js
 - modified:   resources/stylesheets/button_home.css
 - modified:   testsainternet.html

--- a/resources/stylesheets/button_home.css
+++ b/resources/stylesheets/button_home.css
@@ -17,7 +17,7 @@
 
 #button_home {
   bottom: 0;
-  display: none;
+  display: block;
   margin-bottom: 30px;
   margin-right: 30px;
   position: fixed;
