--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,6 +15,11 @@
  * limitations under the License
  */
 
+.embiggen:hover {
+    font-weight: 900;
+    transition: font-weight .2s ease-in-out;
+
+}
 .sainternet-main {
   margin-top: -35vh;
   flex-shrink: 0;
