saint-lascivious.github.io: pull trigger on embiggen everywhere
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   resources/stylesheets/sainternet.css
 - modified:   testsainternet.html

--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,11 +15,16 @@
  * limitations under the License
  */
 
-.embiggen:hover {
+.embiggen:hover, .embiggen:active {
     font-weight: 900;
     transition: font-weight .2s ease-in-out;
-
 }
+
+.mdl-layout-title {
+    -webkit-user-select: none;
+    user-select: none;
+}
+
 .sainternet-main {
   margin-top: -35vh;
   flex-shrink: 0;
