--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,6 +15,16 @@
  * limitations under the License
  */
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+footer {
+  margin-top: auto;
+}
+
 .embiggen:hover, .embiggen:active {
   font-weight: 900;
   transition: font-weight .2s ease-in-out;
