saint-lascivious.github.io: fix footer attempt number 27397036
 - this one seems promising testing on my end
 - slight alteration of some random comment on stackoverflow

Changes to be committed:
modified:   265.html
modified:   404.html
modified:   aboutsainternet.html
modified:   connecttosainternet.html
modified:   filtereddns.html
modified:   frequentlyaskedquestions.html
modified:   index.html
modified:   newsandupdates.html
modified:   pokedexoverdns.html
modified:   portsandprotocols.html
modified:   resources/stylesheets/sainternet.css
modified:   testsainternet.html

--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,6 +15,14 @@
  * limitations under the License
  */
 
+.mdl-layout__content {
+  flex: 1 0 auto;
+}
+
+.mdl-mini-footer {
+  flex: 0 0 auto;
+}
+
 .embiggen:hover, .embiggen:active {
   font-weight: 900;
   transition: font-weight .2s ease-in-out;
