saint-lascivious.github.io: better dns profile list, yeet icons
 - use mdl list style for dns profile downloads
 - extreme back-to-basics for icons and pwa voodoo
   yeet

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   aboutsainternet.html
 - deleted:    android-chrome-144x144.png
 - deleted:    android-chrome-192x192.png
 - deleted:    android-chrome-256x256.png
 - deleted:    android-chrome-36x36.png
 - deleted:    android-chrome-384x384.png
 - deleted:    android-chrome-48x48.png
 - deleted:    android-chrome-512x512.png
 - deleted:    android-chrome-72x72.png
 - deleted:    android-chrome-96x96.png
 - deleted:    apple-touch-icon-114x114-precomposed.png
 - deleted:    apple-touch-icon-114x114.png
 - deleted:    apple-touch-icon-120x120-precomposed.png
 - deleted:    apple-touch-icon-120x120.png
 - deleted:    apple-touch-icon-144x144-precomposed.png
 - deleted:    apple-touch-icon-144x144.png
 - deleted:    apple-touch-icon-152x152-precomposed.png
 - deleted:    apple-touch-icon-152x152.png
 - deleted:    apple-touch-icon-180x180-precomposed.png
 - deleted:    apple-touch-icon-180x180.png
 - deleted:    apple-touch-icon-57x57-precomposed.png
 - deleted:    apple-touch-icon-57x57.png
 - deleted:    apple-touch-icon-60x60-precomposed.png
 - deleted:    apple-touch-icon-60x60.png
 - deleted:    apple-touch-icon-72x72-precomposed.png
 - deleted:    apple-touch-icon-72x72.png
 - deleted:    apple-touch-icon-76x76-precomposed.png
 - deleted:    apple-touch-icon-76x76.png
 - deleted:    apple-touch-icon-precomposed.png
 - deleted:    apple-touch-icon.png
 - deleted:    browserconfig.xml
 - modified:   connecttosainternet.html
 - deleted:    favicon-16x16.png
 - deleted:    favicon-32x32.png
 - modified:   favicon.ico
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - deleted:    mstile-144x144.png
 - deleted:    mstile-150x150.png
 - deleted:    mstile-310x150.png
 - deleted

--- a/resources/stylesheets/ribbons.css
+++ b/resources/stylesheets/ribbons.css
@@ -16,6 +16,7 @@
  */
 
 /** Basic Material Design colour pallet    500|400
+ *
  * red-ribbon           red             F44336,EF5350
  * deep_orange-ribbon   deep_orange     FF5722,FF7043
  * orange-ribbon        orange          FF9800,FFA726
@@ -31,6 +32,11 @@
  * purple-ribbon        purple          9C27BO,AB47BC
  * deep_purple-ribbon   deep_purple     673AB7,7E57C2
  * pink-ribbon          pink            E91C63,EC407A
+ *
+ * all ribbons use the 400% saturation variation for
+ * the best contrast when used alongside the primary
+ * theme colours from mdl css which use the 500%
+ * saturation variation of the same named colour
  */
 
 .red-ribbon {
