saint-lascivious.github.io: limit list width on large screens
Changes to be committed:
 - modified:   resources/stylesheets/sainternet.css

--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -34,7 +34,13 @@
 }
 
 .sainternet-list-action {
-    width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+.sainternet-layout.is-small-screen .sainternet-list-action {
+  width: 100%;
 }
 
 .sainternet-main {
