--- a/resources/stylesheets/table.css
+++ b/resources/stylesheets/table.css
@@ -26,24 +26,24 @@ table {
 
 table tr th,
 table tr td {
-  border-right: 2px solid #757575;
-  border-bottom: 2px solid #757575;
+  border-right: 2px solid #616161;
+  border-bottom: 2px solid #616161;
   padding: 6px;
 }
 
 table tr th:first-child,
 table tr td:first-child {
-  border-left: 2px solid #757575;
+  border-left: 2px solid #616161;
 }
 
 table tr th:first-child,
 table tr td:first-child {
-  border-left: 2px solid #757575;
+  border-left: 2px solid #616161;
 }
 
 table tr th {
-  background: #BDBDBD;
-  border-top: solid 2px #757575;
+  background: #9e9e9e;
+  border-top: solid 2px #616161;
 }
 
 table tr:first-child th:first-child {
