--- a/resources/stylesheets/table.css
+++ b/resources/stylesheets/table.css
@@ -42,7 +42,7 @@ table tr td:first-child {
 }
 
 table tr th {
-  background: #9e9e9e;
+  background: #bdbdbd;
   border-top: solid 2px #616161;
 }
 
