saint-lascivious.github.io: try to fix breakages from 8e5cedf
 - dark on dark/light on light weirdness in;
   tables
   pre
   list-action
 - nav drawer #363636 -> #212121
 - fix pokedexoverdns breadcrumb nav link

Changes to be committed:
 - modified:   pokedexoverdns.html
 - modified:   resources/stylesheets/pre.css
 - modified:   resources/stylesheets/sainternet.css
 - modified:   resources/stylesheets/table.css

--- a/resources/stylesheets/pre.css
+++ b/resources/stylesheets/pre.css
@@ -16,10 +16,19 @@
  */
 
 pre {
-  overflow: auto;
-  background-color: #ffffff;
-  border: 2px solid #757575;
+  border: 2px solid #616161;
   border-radius: 8px;
   font-size: 0.9em;
+  overflow: auto;
   padding: 6px;
+}
+
+@media (prefers-color-scheme: dark) {
+  background-color: #363636;
+  color: #FAFAFA;
+}
+
+@media (prefers-color-scheme: light) {
+  background-color: #FFFFFF;
+  color: #424242;
 }
