--- a/resources/stylesheets/table.css
+++ b/resources/stylesheets/table.css
@@ -31,21 +31,6 @@ table tr td {
   padding: 6px;
 }
 
-table tr th:first-child,
-table tr td:first-child {
-  border-left: 2px solid #616161;
-}
-
-table tr th:first-child,
-table tr td:first-child {
-  border-left: 2px solid #616161;
-}
-
-table tr th {
-  background: #bdbdbd;
-  border-top: solid 2px #616161;
-}
-
 table tr:first-child th:first-child {
   border-top-left-radius: 8px;
 }
@@ -73,5 +58,40 @@ table tr:last-child td:last-child {
 @media (orientation: portrait) {
   table {
     width: 100%;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  table tr th:first-child,
+  table tr td:first-child {
+    border-left: 2px solid #616161;
+  }
+
+  table tr th:first-child,
+  table tr td:first-child {
+    border-left: 2px solid #616161;
+  }
+
+  table tr th {
+    background: #363636;
+    border-top: solid 2px #616161;
+    color: #9E9E9E;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  table tr th:first-child,
+  table tr td:first-child {
+    border-left: 2px solid #616161;
+  }
+
+  table tr th:first-child,
+  table tr td:first-child {
+    border-left: 2px solid #616161;
+  }
+
+  table tr th {
+    background: #bdbdbd;
+    border-top: solid 2px #616161;
   }
 }
