--- a/resources/stylesheets/pre.css
+++ b/resources/stylesheets/pre.css
@@ -23,6 +23,18 @@ pre {
   padding: 6px;
 }
 
+@media (orientation: landscape) {
+  pre {
+    width: 80%;
+  }
+}
+
+@media (orientation: portrait) {
+  pre {
+    width: 100%;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   background-color: #363636;
   color: #FAFAFA;
