saint-lascivious.github.io: various css fixes, amoled dark mode
sometimes standards are wrong

google breaks the no-#000 surfaces rule themselves all the time

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   resources/stylesheets/pre.css
 - modified:   resources/stylesheets/ribbons.css
 - modified:   resources/stylesheets/sainternet.css
 - modified:   resources/stylesheets/table.css
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/resources/stylesheets/pre.css
+++ b/resources/stylesheets/pre.css
@@ -23,24 +23,16 @@ pre {
   padding: 6px;
 }
 
-@media (orientation: landscape) {
-  pre {
-    width: 80%;
-  }
-}
-
-@media (orientation: portrait) {
-  pre {
-    width: 100%;
-  }
-}
-
 @media (prefers-color-scheme: dark) {
-  background-color: #363636;
-  color: #FAFAFA;
+  pre {
+    background: #000000;
+    color: #FAFAFA;
+  }
 }
 
 @media (prefers-color-scheme: light) {
-  background-color: #FFFFFF;
-  color: #424242;
+  pre {
+    background: #FFFFFF;
+    color: #424242;
+  }
 }
