--- a/resources/stylesheets/ribbons.css
+++ b/resources/stylesheets/ribbons.css
@@ -39,107 +39,68 @@
  * saturation variation of the same named colour
  */
 
-.red-ribbon {
+.ribbon {
   width: 100%;
   height: 40vh;
-  background-color: #EF5350;
   flex-shrink: 0;
+}
+
+.red-ribbon {
+  background-color: #EF5350;
 }
 
 .orange-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #FFA726;
-  flex-shrink: 0;
 }
 
 .deep_orange-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #FF7043;
-  flex-shrink: 0;
 }
 
 .yellow-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #FFF176;
-  flex-shrink: 0;
 }
 
 .amber-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #FFCA28;
-  flex-shrink: 0;
 }
 
 .light_green-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #9CCC65;
-  flex-shrink: 0;
 }
 
 .green-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #66BB6A;
-  flex-shrink: 0;
 }
 
 .teal-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #26A69A;
-  flex-shrink: 0;
 }
 
 .light_blue-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #29B6F6;
-  flex-shrink: 0;
 }
 
 .cyan-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #26C6DA;
-  flex-shrink: 0;
 }
 
 .blue-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #42A5F5;
-  flex-shrink: 0;
 }
 
 .indigo-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #5C6BC0;
-  flex-shrink: 0;
 }
 
 .purple-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #AB47BC;
-  flex-shrink: 0;
 }
 
 .deep_purple-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #7E57C2;
-  flex-shrink: 0;
 }
 
 .pink-ribbon {
-  width: 100%;
-  height: 40vh;
   background-color: #EC407A;
-  flex-shrink: 0;
 }
