--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -62,7 +62,6 @@
 
 .sainternet-navigation {
   border-radius: 50vh;
-  color: #9E9E9E;
   padding: 20px 28px;
   margin-bottom: 40px;
   text-align: center;
@@ -123,6 +122,7 @@
   }
   .sainternet-navigation {
     background: #000000;
+    color: #FAFAFA;
   }
 }
 
@@ -139,5 +139,6 @@
   }
   .sainternet-navigation {
     background: #FFFFFF;
+    color: #424242;
   }
 }
