--- a/resources/stylesheets/img.css
+++ b/resources/stylesheets/img.css
@@ -23,6 +23,7 @@ img {
 
 @media (orientation: landscape) {
   img {
+    height: auto;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
@@ -31,6 +32,7 @@ img {
 
 @media (orientation: portrait) {
   img {
+    height: auto;
     width: 100%;
   }
 }
