saint-lascivious.github.io: font-display, FOUT via class test
Changes to be committed:
 - modified:   .html.orig/index.html.orig
 - modified:   index.html
 - new file:   resources/javascript/load-fonts.js
 - new file:   resources/javascript/load-fonts.min.js
 - modified:   resources/stylesheets/sainternet.css
 - modified:   resources/stylesheets/sainternet.min.css

--- a/resources/stylesheets/sainternet.css
+++ b/resources/stylesheets/sainternet.css
@@ -15,6 +15,14 @@
  * limitations under the License
  */
 
+body {
+  font-family: sans-serif;
+}
+
+.fonts-loaded body {
+  font-family: Roboto,  sans-serif;
+}
+
 .mdl-layout__content {
   flex: 1 0 auto;
 }
